--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "readline": "^1.3.0",
     "simple-git": "^1.72.0",
     "stream-transcoder": "0.0.5",
-    "walk": "^2.3.9"
+    "walk": "^2.3.9",
+    "wav":"^1.0.1"
   },
   "devDependencies": {
     "@types/node": "7.0.29",
