--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
   "PROD": false,
   "DB_ROOT_USER": "root",
-  "DB_ROOT_PASS": "root",
-  "MYSQLUSER": "voicecommons",
-  "MYSQLPASS": "voicecommons",
-  "MYSQLDBNAME": "voiceweb",
-  "MYSQLHOST": "localhost",
+  "DB_ROOT_PASS": "commonvoice123",
+  "MYSQLUSER": "root",
+  "MYSQLPASS": "commonvoice123",
+  "MYSQLDBNAME": "lleisiwrvoiceweb",
+  "MYSQLHOST": "mysql",
   "MYSQLPORT":  "3306",
   "BUCKET_NAME": "",
   "BUCKET_LOCATION": ""
